# CloudDataCenter_Simulator

./: .gitignore  CMakeLists.txt  settings.ini
scripts/: ParseData.m  ParseData.py  Parser.py  PlotData.m  PlotDataOptimized.m
src/Core/include/: DataCenter.h  ISimulationConfiguration.h  ISimulationStatus.h  SimulationEngine.h  StatisticsRecorder.h  TraceReader.h
src/Core/include/concurrent/: ConcurrentEventQueue.h
src/Core/include/data/: PhysicalMachine.h  Resources.h  VirtualMachine.h
src/Core/include/events/: IEvent.h  MigrationCompleteEvent.h  ReconfigureStrategyEvent.h  VMDepartureEvent.h  VMRequestEvent.h  VMUtilUpdateEvent.h
src/Core/include/logging/: LogManager.h
src/Core/include/strategies/: AlphaBetaStrategy.h  BestFitDecreasing.h  FirstFitDecreasing.h  IConfigurableStrategy.h  ILPStrategy.h  IPlacementStrategy.h  MachineState.h  OpenStack.h  StrategyFactory.h
src/Core/include/strategies/drl/: DDQNAgent.h  DQNAgent.h  IDQNAgent.h  IDQNStrategy.h  ILPDDQNStrategy.h  ILPDQNStrategy.h
src/Core/include/strategies/pso/: PAPSOStrategy.h
src/Core/src/: DataCenter.cpp  SimulationEngine.cpp  StatisticsRecorder.cpp  TraceReader.cpp
src/Core/src/concurrent/: ConcurrentEventQueue.cpp
src/Core/src/data/: PhysicalMachine.cpp  VirtualMachine.cpp
src/Core/src/events/: MigrationCompleteEvent.cpp  ReconfigureStrategyEvent.cpp  VMDepartureEvent.cpp  VMRequestEvent.cpp  VMUtilUpdateEvent.cpp
src/Core/src/logging/: LogManager.cpp
src/Core/src/strategies/: AlphaBetaStrategy.cpp  BestFitDecreasing.cpp  FirstFitDecreasing.cpp  ILPStrategy.cpp  IPlacementStrategy.cpp  OpenStack.cpp  StrategyFactory.cpp
src/Core/src/strategies/drl/: DQNAgent.cpp  IDQNStrategy.cpp  ILPDDQNStrategy.cpp  ILPDQNStrategy.cpp
src/Core/src/strategies/pso/: PAPSOStrategy.cpp
src/UI/include/: ConfigurationDock.h  LoggingDock.h  LoggingPanel.h  MachineDock.h  MachineHeatmapDock.h  MachinePanel.h  MainWindow.h  SimulatorController.h  StatusDock.h  StrategyConfigDock.h  UsageGraphDock.h
src/UI/src/: ConfigurationDock.cpp  LoggingDock.cpp  LoggingPanel.cpp  MachineDock.cpp  MachineHeatmapDock.cpp  MachinePanel.cpp  MainWindow.cpp  MainWindow.ui  SimulatorController.cpp  StatusDock.cpp  StrategyConfigDock.cpp  UsageGraphDock.cpp  main.cpp
